# emergent-task-api

./: README.md  main.py  pyproject.toml
tasks/: __init__.py  __main__.py  domain.py  pipeline.py  provider.py  wiring.py
